[package]
name = "secret-bento"
version = "0.6.0"
edition = "2021"
description = "AI-safe secret cleanup handoff reports for beginner vibe coders."
license = "MIT"
repository = "https://github.com/dev-bento/secret-bento"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
